<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_maps_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--TO DO: Add the map fragment for the user to select the location
        added below-->

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

    <!-- add a button for the user to save the selected location-->
        <TextView
            android:id="@+id/savemap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
